web/server/data/bash-logs/bash_2026-07-15T02-35-24_nc2n.log
# bash log — 2026/7/15 10:35:24
# session: (none)
# exit: 1  duration: 51ms
# command:
python -c "import os; [os.remove(f) for f in ['check_gh.py','fix_gh.py','fix_ytdlp.py'] if os.path.exists(f)]" 2>&1

# stdout (110 chars):
  File "<string>", line 1
    "import
    ^
SyntaxError: unterminated string literal (detected at line 1)


